--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="tinymce.min.js"></script>
+  <script src="https://assets.projectoms.com/JavaScript/tinymce.min.js"></script>
   <script type="text/javascript">
 
   tinymce.init({
     selector: '#mytextarea',
-    language: 'zh_CN',
+    language: 'zh-Hans',
     menubar: 'edit format',
     plugins: 'image',
     automatic_uploads: true,
-    images_upload_url: 'https://api.projectoms.com/upload/comment_img',
     branding: false
   });
   </script>
