--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     language: 'zh-Hans',
     menubar: 'edit format',
     plugins: 'image',
-    branding: false
+    branding: false,
+    promotion: false
   });
   </script>
 </head>
